--- a/core/modules/layout/layouts/three_three_four/three-three-four.css
+++ b/core/modules/layout/layouts/three_three_four/three-three-four.css
@@ -1,71 +1,49 @@
-
-html,
-body,
-#page  {
+/**
+ * @file
+ * CSS for the three-three-four layout.
+ */
+.layout-three-three-four #page  {
   height: 100%;
 }
-#page-wrapper {
+.layout-three-three-four #page-wrapper {
   min-height: 100%;
 }
-#header div.section,
-#featured div.section,
-#messages div.section,
-#main,
-#triptych,
-#footer-columns,
-#footer {
+.layout-three-three-four #header div.section,
+.layout-three-three-four #featured div.section,
+.layout-three-three-four #messages div.section,
+.layout-three-three-four #main,
+.layout-three-three-four #triptych,
+.layout-three-three-four #footer-columns,
+.layout-three-three-four #footer {
   width: 100%;
-  max-width: 860px;
   margin-left: auto;
   margin-right: auto;
 }
-#header div.section {
-  position: relative;
-}
-.region-header {
-  float: right; /* LTR */
-  margin: .5em 5px .75em;
-  border: 1px solid #ccc;
-}
-[dir="rtl"] .region-header {
-  float: left;
-}
-#secondary-menu {
-  width: 100%;
-  margin: 0 auto;
-  overflow: hidden;
-}
-#main-wrapper {
-  min-height: 300px;
-}
-#content .section,
-.sidebar .section {
+.layout-three-three-four #content .section,
+.layout-three-three-four #sidebar .section {
   padding: 0 15px;
 }
-.breadcrumb {
-  margin: 0 15px;
-}
-#footer-wrapper {
+.layout-three-three-four #footer-wrapper {
   padding: 35px 0 30px;
 }
-#footer-wrapper .section {
+.layout-three-three-four #footer-wrapper .section {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   padding: 0 15px;
 }
-.region-triptych-first,
-.region-triptych-middle,
-.region-triptych-last {
+.layout-three-three-four .region-triptych-first,
+.layout-three-three-four .region-triptych-middle,
+.layout-three-three-four .region-triptych-last {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   padding: 0 20px 0;
 }
-.region-footer-firstcolumn,
-.region-footer-secondcolumn,
-.region-footer-thirdcolumn,
-.region-footer-fourthcolumn {
+.layout-three-three-four .region-footer-firstcolumn,
+.layout-three-three-four .region-footer-secondcolumn,
+.layout-three-three-four .region-footer-thirdcolumn,
+.layout-three-three-four .region-footer-fourthcolumn {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -73,170 +51,153 @@ body,
 }
 
 @media all and (min-width: 560px) and (max-width: 850px) {
-
-  #sidebar-first,
-  .region-triptych-first,
-  .region-triptych-middle,
-  .region-triptych-last,
-  .region-footer-firstcolumn,
-  .region-footer-secondcolumn,
-  .region-footer-thirdcolumn,
-  .region-footer-fourthcolumn {
+  .layout-three-three-four #sidebar-first,
+  .layout-three-three-four .region-triptych-first,
+  .layout-three-three-four .region-triptych-middle,
+  .layout-three-three-four .region-triptych-last,
+  .layout-three-three-four .region-footer-firstcolumn,
+  .layout-three-three-four .region-footer-secondcolumn,
+  .layout-three-three-four .region-footer-thirdcolumn,
+  .layout-three-three-four .region-footer-fourthcolumn {
     display: inline;
     float: left; /* LTR */
     position: relative;
   }
-  [dir="rtl"] #sidebar-first,
-  [dir="rtl"] .region-triptych-first,
-  [dir="rtl"] .region-triptych-middle,
-  [dir="rtl"] .region-triptych-last,
-  [dir="rtl"] .region-footer-firstcolumn,
-  [dir="rtl"] .region-footer-secondcolumn,
-  [dir="rtl"] .region-footer-thirdcolumn,
-  [dir="rtl"] .region-footer-fourthcolumn {
+  [dir="rtl"] .layout-three-three-four #sidebar-first,
+  [dir="rtl"] .layout-three-three-four .region-triptych-first,
+  [dir="rtl"] .layout-three-three-four .region-triptych-middle,
+  [dir="rtl"] .layout-three-three-four .region-triptych-last,
+  [dir="rtl"] .layout-three-three-four .region-footer-firstcolumn,
+  [dir="rtl"] .layout-three-three-four .region-footer-secondcolumn,
+  [dir="rtl"] .layout-three-three-four .region-footer-thirdcolumn,
+  [dir="rtl"] .layout-three-three-four .region-footer-fourthcolumn {
     float: right;
   }
-  #sidebar-first,
-  #sidebar-second {
+  .layout-three-three-four #sidebar-first,
+  .layout-three-three-four #sidebar-second {
     width: 50%;
   }
-  #sidebar-second {
+  .layout-three-three-four #sidebar-second {
     margin-left: 50%; /* LTR */
   }
-  [dir="rtl"] #sidebar-second {
+  [dir="rtl"] .layout-three-three-four #sidebar-second {
     margin-right: 50%;
   }
-  .one-sidebar #sidebar-first,
-  .one-sidebar #sidebar-second {
-    width: 100%;
-  }
-  .one-sidebar #sidebar-second {
-    margin-left: 0; /* LTR */
-  }
-  [dir="rtl"] .one-sidebar #sidebar-second {
-    margin-right: 0;
-  }
-  .region-triptych-first,
-  .region-triptych-middle,
-  .region-triptych-last {
+  .layout-three-three-four .region-triptych-first,
+  .layout-three-three-four .region-triptych-middle,
+  .layout-three-three-four .region-triptych-last {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     padding: 20px 15px 30px;
     width: 33%;
   }
-  .region-triptych-middle {
+  .layout-three-three-four .region-triptych-middle {
     padding: 20px 5px 30px;
   }
-  .region-footer-firstcolumn,
-  .region-footer-secondcolumn {
+  .layout-three-three-four .region-footer-firstcolumn,
+  .layout-three-three-four .region-footer-secondcolumn {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     padding: 0 10px;
     width: 50%;
   }
-  .region-footer-thirdcolumn,
-  .region-footer-fourthcolumn {
+  .layout-three-three-four .region-footer-thirdcolumn,
+  .layout-three-three-four .region-footer-fourthcolumn {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     padding: 0 10px;
     width: 50%;
   }
-  .region-footer-thirdcolumn {
+  .layout-three-three-four .region-footer-thirdcolumn {
     clear: both;
   }
 }
 
 @media all and (min-width: 851px) {
-
-  #header div.section,
-  #featured div.section,
-  #messages div.section,
-  #main,
-  #triptych,
-  #footer-columns,
-  #footer {
-    max-width: 1290px;
-  }
-  #content,
-  #sidebar-first,
-  #sidebar-second,
-  .region-triptych-first,
-  .region-triptych-middle,
-  .region-triptych-last,
-  .region-footer-firstcolumn,
-  .region-footer-secondcolumn,
-  .region-footer-thirdcolumn,
-  .region-footer-fourthcolumn {
+  .layout-three-three-four #content,
+  .layout-three-three-four #sidebar-first,
+  .layout-three-three-four #sidebar-second,
+  .layout-three-three-four .region-triptych-first,
+  .layout-three-three-four .region-triptych-middle,
+  .layout-three-three-four .region-triptych-last,
+  .layout-three-three-four .region-footer-firstcolumn,
+  .layout-three-three-four .region-footer-secondcolumn,
+  .layout-three-three-four .region-footer-thirdcolumn,
+  .layout-three-three-four .region-footer-fourthcolumn {
     display: inline;
     float: left; /* LTR */
     position: relative;
   }
-  [dir="rtl"] #content,
-  [dir="rtl"] #sidebar-first,
-  [dir="rtl"] #sidebar-second,
-  [dir="rtl"] .region-triptych-first,
-  [dir="rtl"] .region-triptych-middle,
-  [dir="rtl"] .region-triptych-last,
-  [dir="rtl"] .region-footer-firstcolumn,
-  [dir="rtl"] .region-footer-secondcolumn,
-  [dir="rtl"] .region-footer-thirdcolumn,
-  [dir="rtl"] .region-footer-fourthcolumn {
+  [dir="rtl"] .layout-three-three-four #content,
+  [dir="rtl"] .layout-three-three-four #sidebar-first,
+  [dir="rtl"] .layout-three-three-four #sidebar-second,
+  [dir="rtl"] .layout-three-three-four .region-triptych-first,
+  [dir="rtl"] .layout-three-three-four .region-triptych-middle,
+  [dir="rtl"] .layout-three-three-four .region-triptych-last,
+  [dir="rtl"] .layout-three-three-four .region-footer-firstcolumn,
+  [dir="rtl"] .layout-three-three-four .region-footer-secondcolumn,
+  [dir="rtl"] .layout-three-three-four .region-footer-thirdcolumn,
+  [dir="rtl"] .layout-three-three-four .region-footer-fourthcolumn {
     float: right;
   }
-  .layout-two-sidebars #content {
+  .layout-three-three-four main {
+    display: inline;
+    float: left;
+  }
+  .layout-three-three-four.layout-two-sidebars main {
     margin-left: 25%;
     margin-right: 25%;
     width: 50%;
   }
-  .layout-one-sidebar #content {
+  .layout-three-three-four.layout-one-sidebar main {
     width: 75%;
   }
-  .layout-no-sidebars #content {
+  .layout-three-three-four.layout-no-sidebars main {
     width: 100%;
   }
-  .layout-sidebar-first #content {
+  .layout-three-three-four.layout-sidebar-first main {
     margin-left: 25%; /* LTR */
     margin-right: 0; /* LTR */
   }
-  [dir="rtl"] .layout-sidebar-first #content {
+  [dir="rtl"] .layout-three-three-four.layout-sidebar-first main {
     margin-left: 0;
     margin-right: 25%;
   }
-  .layout-sidebar-second #content {
+  .layout-three-three-four.layout-sidebar-second main {
     margin-right: 25%; /* LTR */
     margin-left: 0; /* LTR */
   }
-  [dir="rtl"] .layout-sidebar-second #content {
+  [dir="rtl"] .layout-three-three-four.layout-sidebar-second main {
     margin-right: 0;
     margin-left: 25%;
   }
-  #sidebar-first {
+  .layout-three-three-four #sidebar-first {
     width: 25%;
     margin-left: -100%; /* LTR */
   }
-  [dir="rtl"] #sidebar-first {
+  [dir="rtl"] .layout-three-three-four #sidebar-first {
     margin-right: -100%;
   }
-  #sidebar-second {
+  .layout-three-three-four #sidebar-second {
     width: 25%;
     margin-left: -25%; /* LTR */
     clear: none;
   }
-  [dir="rtl"] #sidebar-second {
+  [dir="rtl"] .layout-three-three-four #sidebar-second {
     margin-right: -25%;
   }
-  .region-triptych-first,
-  .region-triptych-middle,
-  .region-triptych-last {
+  .layout-three-three-four .region-triptych-first,
+  .layout-three-three-four .region-triptych-middle,
+  .layout-three-three-four .region-triptych-last {
     width: 33%;
   }
-  .region-footer-firstcolumn,
-  .region-footer-secondcolumn,
-  .region-footer-thirdcolumn,
-  .region-footer-fourthcolumn {
+  .layout-three-three-four .region-footer-firstcolumn,
+  .layout-three-three-four .region-footer-secondcolumn,
+  .layout-three-three-four .region-footer-thirdcolumn,
+  .layout-three-three-four .region-footer-fourthcolumn {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
