--- a/core/themes/bartik/css/colors.css
+++ b/core/themes/bartik/css/colors.css
@@ -9,8 +9,8 @@ body {
 }
 #page,
 #main-wrapper,
-#main-menu-links li a.active,
-#main-menu-links li.active-trail a {
+#header ul.menu li a.active,
+#header ul.menu li.active-trail a {
   background: #ffffff;
 }
 .tabs ul.primary li a.active {
@@ -21,6 +21,7 @@ body {
   border-bottom: 1px solid #ffffff;
 }
 #header {
+  color: #fffeff;
   background-color: #48a9e4;
   background-image: -moz-linear-gradient(top, #0779bf 0%, #48a9e4 100%);
   background-image: -ms-linear-gradient(top, #0779bf 0%, #48a9e4 100%);
@@ -47,11 +48,6 @@ a:active {
 #footer-wrapper {
   background: #292929;
 }
-.region-header,
-.region-header a,
-.region-header li a.active,
-#name-and-slogan,
-#name-and-slogan a,
-#secondary-menu-links li a {
+#header a {
   color: #fffeff;
 }
