Issue #86: Stripping down block module to be responsible only for custom blocks.

--- a/core/modules/layout/css/layout.admin.css
+++ b/core/modules/layout/css/layout.admin.css
@@ -24,6 +24,10 @@
   width: 90px;
   margin-bottom: 1em;
 }
+#layout-settings-form .form-item-path {
+  display: inline-block;
+  vertical-align: middle;
+}
 
 /* Menu item argument settings. */
 #layout-arguments strong,
