--- a/core/themes/bartik/css/style.css
+++ b/core/themes/bartik/css/style.css
@@ -106,7 +106,8 @@ body,
   font-family: Georgia, "Times New Roman", Times, serif;
 }
 #header,
-#footer-wrapper,
+#footer-columns,
+#footer,
 #skip-link,
 ul.contextual-links,
 ul.links,
@@ -188,9 +189,6 @@ table {
 table table {
   font-size: 1em;
 }
-#footer-wrapper table {
-  font-size: 1em;
-}
 table tr th {
   background: #757575;
   background: rgba(0, 0, 0, 0.51);
@@ -214,11 +212,6 @@ tr th {
 [dir="rtl"] tr td,
 [dir="rtl"] tr th {
   text-align: right;
-}
-#footer-wrapper tr td,
-#footer-wrapper tr th {
-  border-color: #555;
-  border-color: rgba(255, 255, 255, 0.18);
 }
 tr.odd {
   background: #e4e4e4;
@@ -897,36 +890,39 @@ article .link-wrapper ul.links {
 
 /* ------------------ Footer ------------------ */
 
-#footer-wrapper {
+#footer-columns,
+#footer {
   color: #c0c0c0;
   color: rgba(255, 255, 255, 0.65);
   font-size: 0.857em;
 }
-#footer-wrapper a {
+#footer-columns a,
+#footer a {
   color: #fcfcfc;
   color: rgba(255, 255, 255, 0.8);
 }
-#footer-wrapper a:hover,
-#footer-wrapper a:focus {
+#footer-columns a:hover,
+#footer-columns a:focus,
+#footer a:hover,
+#footer a:focus {
   color: #fefefe;
   color: rgba(255, 255, 255, 0.95);
   text-decoration: underline;
 }
-#footer-wrapper .block {
+#footer-columns .block,
+#footer .block {
   margin: 20px 0;
   border: 1px solid #444;
   border-color: rgba(255, 255, 255, 0.1);
   padding: 10px;
 }
-#footer-columns .header-menu,
+#footer-columns .block,
 #footer .block {
-  margin: 0;
+  margin: 0.5em 0;
   padding: 0;
   border: none;
 }
-#footer .block {
-  margin: 0.5em 0;
-}
+#columns .block .content,
 #footer .block .content {
   padding: 0.5em 0;
   margin-top: 0;
@@ -934,7 +930,11 @@ article .link-wrapper ul.links {
 #footer .block h2 {
   margin: 0;
 }
-#footer-columns h2 {
+#footer-columns {
+  padding-top: 30px;
+}
+#footer-columns h2,
+#footer h2 {
   border-bottom: 1px solid #555;
   border-color: rgba(255, 255, 255, 0.15);
   font-size: 1em;
@@ -942,23 +942,28 @@ article .link-wrapper ul.links {
   padding-bottom: 3px;
   text-transform: uppercase;
 }
-#footer-columns .content {
+#footer-columns .content,
+#footer .content {
   margin-top: 0;
 }
-#footer-columns p {
+#footer-columns p,
+#footer p {
   margin-top: 1em;
 }
-#footer-columns .content ul {
+#footer-columns ul,
+#footer ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-#footer-columns .content li {
+#footer-columns li,
+#footer li {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-#footer-columns .content li a {
+#footer-columns li a,
+#footer li a {
   display: block;
   border-bottom: 1px solid #555;
   border-color: rgba(255, 255, 255, 0.15);
@@ -966,18 +971,24 @@ article .link-wrapper ul.links {
   padding: 0.8em 2px 0.8em 20px; /* LTR */
   text-indent: -15px;
 }
-[dir="rtl"] #footer-columns .content li a {
+[dir="rtl"] #footer-columns li a,
+[dir="rtl"] #footer li a {
   padding: 0.8em 20px 0.8em 2px;
 }
-#footer-columns .content li a:hover,
-#footer-columns .content li a:focus {
+#footer-columns li a:hover,
+#footer-columns li a:focus,
+#footer li a:hover,
+#footer li a:focus {
   background-color: #1f1f21;
   background-color: rgba(255, 255, 255, 0.05);
   text-decoration: none;
 }
 #footer {
-  letter-spacing: 0.2px;
-  margin-top: 30px;
+  padding-top: 30px;
+}
+#footer .section {
+  letter-spacing: 0.2;
+  padding-top: 30px;
   border-top: 1px solid #555;
   border-color: rgba(255, 255, 255, 0.15);
 }
