--- a/core/themes/bartik/css/style.css
+++ b/core/themes/bartik/css/style.css
@@ -281,6 +281,7 @@ ul.tips {
 
 /* All multi-column layouts */
 #header .section,
+#top .section,
 #footer .section,
 #messages .section,
 #main,
@@ -564,37 +565,24 @@ ul.tips {
   margin-bottom: 40px;
 }
 
-/* ----------------- Featured ----------------- */
+/* ----------------- Top ----------------- */
 
-#featured {
-  text-align: center;
-  font-size: 1.643em;
-  font-weight: normal;
-  line-height: 1.4;
-  padding: 20px 0 45px;
-  margin: 0;
-  background: #f0f0f0;
-  background: rgba(30, 50, 10, 0.08);
-  border-bottom: 1px solid #e7e7e7;
-  text-shadow: 1px 1px #fff;
-}
-#featured h2 {
-  font-size: 1.174em;
-  line-height: 1;
-}
-#featured p {
-  margin: 0;
-  padding: 0;
+#top {
+  margin-top: 20px;
 }
 
 /* ----------------- Content ------------------ */
 
+#content {
+  min-height: 300px;
+}
 .content {
   margin-top: 10px;
 }
 h1#page-title {
   font-size: 2em;
   line-height: 1;
+  margin-top: .5em;
 }
 #content h2 {
   margin-bottom: 2px;
@@ -805,9 +793,6 @@ article .link-wrapper ul.links {
 }
 
 /* ------------------ Sidebar ----------------- */
-.sidebar .section {
-  padding-top: 10px;
-}
 .sidebar .block {
   border: 1px solid;
   padding: 15px 20px;
@@ -984,7 +969,7 @@ article .link-wrapper ul.links {
   text-decoration: none;
 }
 #footer {
-  padding-top: 30px;
+  padding: 35px 0 30px;
 }
 #footer .section {
   letter-spacing: 0.2;
@@ -1139,14 +1124,6 @@ ul.action-links li a {
 
 /* ---------------- Messages  ----------------- */
 
-#messages {
-  padding: 20px 0 5px;
-  margin: 0 auto;
-}
-.featured #messages {
-  background: #f0f0f0;
-  background: rgba(30, 50, 10, 0.08);
-}
 div.messages {
   margin: 8px 0;
 }
@@ -1155,6 +1132,11 @@ div.messages {
 
 .breadcrumb {
   font-size: 0.929em;
+  padding: 0;
+}
+.breadcrumb ol {
+  margin: 0;
+  padding: 0;
 }
 
 /* -------------- User Profile   -------------- */
