Issue #86: Moving layouts to top-level concept with .info files.

--- a/core/themes/bartik/css/style.css
+++ b/core/themes/bartik/css/style.css
@@ -277,7 +277,7 @@ ul.tips {
 /* ------------------ Layout ------------------ */
 
 /* One Column Layout */
-.layout-onecol main .section,
+.layout-one-column main .section,
 
 /* All multi-column layouts */
 #header .section,
