Issue #86: Adding validation to prevent the main content block from being added multiple times (or not at all).

--- a/core/themes/seven/style.css
+++ b/core/themes/seven/style.css
@@ -287,6 +287,7 @@ ul.secondary li.active a.active {
   margin: 0 -20px 20px;
   background-color: #e0e0d8;
 }
+.layout-one-column #messages,
 .layout-one-column #content .section {
   /* Make the one column layout margin match other layouts. */
   margin: 0 15px;
