--- a/core/modules/admin_bar/css/admin_bar.css
+++ b/core/modules/admin_bar/css/admin_bar.css
@@ -321,3 +321,24 @@ tr.admin-bar-tweak-permissions-processed {
 tr.admin-bar-tweak-permissions-processed td.module {
   border-top: 0;
 }
+
+/* Alert colors */
+#admin-bar .dropdown .admin-bar-alert span.error-count {
+  border-radius: 50%;
+  padding: 3px 6px;
+  border: 6px solid #000000;
+}
+#admin-bar .admin-bar-alert-error span.error-count {
+  background-color: #ee3d23;
+}
+#admin-bar .top-level a.admin-bar-alert {
+  max-width: 50px;
+  overflow: hidden;
+  padding: 9px 6px;
+}
+#admin-bar .top-level .admin-bar-alert a {
+  visibility: hidden;
+}
+#admin-bar .top-level .admin-bar-alert a span.error-count {
+  visibility: visible;
+}
