--- a/core/themes/basis/css/layout.css
+++ b/core/themes/basis/css/layout.css
@@ -2,12 +2,6 @@
  * @file
  * Component Layout CSS and some Page layout overrides
  */
-
-.l-header {
-  position: relative;
-  margin: 0 0 2rem;
-}
-
-.layout .l-messages {
-  margin: 0 0 2rem;
+.layout {
+  overflow: hidden;
 }
